<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.figsinc.app.login.LoginActivity">

    <LinearLayout
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@+id/textInputLastName">

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:ems="10"
                android:hint="@string/title_Email_Address"
                android:fontFamily="@font/regular"
                android:inputType="textEmailAddress"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputPassword"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:ems="10"
                android:fontFamily="@font/regular"
                android:hint="@string/title_Password"

                />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/buttonLogIn"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_below="@+id/textInputPassword"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/selector_submit_btn"
            android:text="@string/title_Log_In"
            android:inputType="text"
            android:fontFamily="@font/bold"
            android:textColor="@color/white"
            android:textSize="@dimen/signup_email" />

        <TextView
            android:id="@+id/textView_ForgetPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:gravity="center"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/bold"
            android:text="@string/title_Forgot_Password"
            android:textColor="@color/darkish_blue"
            android:textSize="@dimen/signin" />
    </LinearLayout>

</RelativeLayout>



