<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.figsinc.app.login.SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linear_acceptance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.9"
                    android:fontFamily="@font/regular"
                    android:lineSpacingExtra="8sp"
                    android:text="@string/signup_agree"
                    android:textColor="@color/black_87"
                    android:textSize="16sp"
                    android:textStyle="normal" />

                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/checkbox_agree"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
                    android:checked="false" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.9"
                    android:fontFamily="@font/regular"
                    android:lineSpacingExtra="8sp"
                    android:singleLine="false"
                    android:text="@string/signup_marketting"
                    android:textColor="@color/black_87"
                    android:textSize="16sp"
                    android:textStyle="normal" />

                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/checkbox_promotional"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
                    android:checked="false" />
            </LinearLayout>
        </LinearLayout>


        <View xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_below="@+id/linear_acceptance"
            android:background="@color/background"></View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linear_acceptance"
            android:layout_margin="8dp"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputFirstName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:fontFamily="@font/regular">

                <EditText
                    android:id="@+id/editTextFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:background="@android:color/transparent"
                    android:ems="10"
                    android:textSize="@dimen/text_size_16"
                    android:fontFamily="@font/regular"
                    android:hint="@string/hint_First_Name"
                    android:inputType="textPersonName" />
            </android.support.design.widget.TextInputLayout>

            <include layout="@layout/separator"></include>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLastName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/textInputFirstName"
                android:fontFamily="@font/regular">

                <EditText
                    android:id="@+id/editTextLastName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:background="@android:color/transparent"
                    android:ems="10"
                    android:textSize="@dimen/text_size_16"
                    android:fontFamily="@font/regular"
                    android:hint="@string/hint_Last_Name"
                    android:inputType="textPersonName" />
            </android.support.design.widget.TextInputLayout>

            <include layout="@layout/separator"></include>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/textInputLastName"
                android:fontFamily="@font/regular">

                <EditText
                    android:id="@+id/editTextEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:background="@android:color/transparent"
                    android:ems="10"
                    android:textSize="@dimen/text_size_16"
                    android:fontFamily="@font/regular"
                    android:hint="@string/hint_Email_Address"
                    android:inputType="textPersonName" />
            </android.support.design.widget.TextInputLayout>

            <include layout="@layout/separator"></include>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/textInputEmailAddress">

                <Spinner
                    android:id="@+id/spinner_SelectCountry"
                    style="@style/Widget.AppCompat.DropDownItem.Spinner"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="0dp"
                    android:textSize="@dimen/text_size_16"
                    android:entries="@array/countries_array"
                    android:fontFamily="@font/regular" />
            </RelativeLayout>

            <include layout="@layout/separator"></include>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/spinner_SelectCountry"
                android:fontFamily="@font/regular"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:background="@android:color/transparent"
                    android:ems="10"
                    android:textSize="@dimen/text_size_16"
                    android:fontFamily="@font/regular"
                    android:hint="@string/hint_Password"
                    android:inputType="textPassword"

                    />
            </android.support.design.widget.TextInputLayout>

            <include layout="@layout/separator"></include>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/spinner_SelectCountry"
                android:fontFamily="@font/regular"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editTextConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:background="@android:color/transparent"
                    android:ems="10"
                    android:textSize="@dimen/text_size_16"
                    android:fontFamily="@font/regular"
                    android:hint="@string/hint_Confirm_Password"
                    android:inputType="textPassword"

                    />
            </android.support.design.widget.TextInputLayout>

            <include layout="@layout/separator"></include>

            <Button
                android:id="@+id/buttonCreate"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/textInputPassword"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="15dp"
                android:background="@color/signin_disable"
                android:fontFamily="@font/bold"
                android:inputType="text"
                android:text="@string/button_Next"
                android:textColor="@color/white"
                android:textSize="@dimen/signup_email" />
        </LinearLayout>

        <LinearLayout
            android:layout_centerHorizontal="true"
            android:id="@+id/linear_bottomLayout"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/regular"
                android:text="@string/signup_click_agree"
                android:textColor="@color/greyBlue"
                android:textSize="@dimen/text_size_14"
                android:textStyle="normal" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/semibold"
                    android:paddingRight="7dp"
                    android:id="@+id/textView_terms_of_service"
                    android:text="@string/signup_terms_of_service"
                    android:textColor="@color/darkish_blue"
                    android:textSize="@dimen/text_size_14"
                    android:textStyle="normal" />

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/regular"
                    android:paddingRight="7dp"
                    android:text="@string/signup_and"
                    android:textColor="@color/greyBlue"
                    android:textSize="@dimen/text_size_14"
                    android:textStyle="normal" />

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/signup_Privacy_Policy"
                    android:fontFamily="@font/semibold"
                    android:text="@string/signup_Privacy_Policy"
                    android:textColor="@color/darkish_blue"
                    android:textSize="@dimen/text_size_14" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>

